# wayland-coffee

./: LICENSE  README.md  pyproject.toml
src/wayland_coffee/: __init__.py  wayland_idle_inhibitor.py
