[project]
name = "wayland-coffee"
version = "0.1.0"
description = "Keep your wayland alive."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "setproctitle>=1.3.3",
    "pywayland>=0.4.18",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[project.scripts]
coffee = "wayland_coffee:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wayland_coffee"]
